tests/sema/golden/24_missing_return.out
tests/sema/bad/24_missing_return.sg:1:1: error: not all paths return a value in function 'bad'
  fn bad(a:int) -> int {
  ^
